--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "firebase-tools": "^13.3.1",
     "nodemailer": "^6.6.3"
   },
   "devDependencies": {
